<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/homeFragmentId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.ahmedorabi.nutritiontask.ui.presentation.home.HomeFragment">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="20dp"
            android:gravity="top"
            android:hint="Enter all ingredient line by line, each line food name, quantity and unit"
            android:padding="20dp"
            android:background="@drawable/customborder"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/analyzeBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:enabled="false"
            android:layout_marginBottom="28dp"
            android:text="Analyze"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>