<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ingredientListFragmentId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.ahmedorabi.nutritiontask.ui.presentation.ingredientlist.IngredientListFragment">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/customborder"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/quantityId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:includeFontPadding="false"
                android:lineSpacingExtra="0dp"
                android:maxLines="2"
                android:text="Qty"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/unitTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center"
                android:includeFontPadding="false"
                android:lineSpacingExtra="0dp"
                android:maxLines="2"
                android:text="Unit"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/foodTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:includeFontPadding="false"
                android:lineSpacingExtra="0dp"
                android:maxLines="1"
                android:text="Food"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/caloriesTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:includeFontPadding="false"
                android:lineSpacingExtra="0dp"
                android:maxLines="1"
                android:text="Calories"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/weightTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:includeFontPadding="false"
                android:lineSpacingExtra="0dp"
                android:maxLines="1"
                android:text="Weight"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/black"
                android:textSize="16sp" />


        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_main"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="30dp"
            android:clickable="true"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/showTotalBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:listitem="@layout/user_item" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progressbar"
            style="?android:attr/progressBarStyle"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/showTotalBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="28dp"
            android:text="Show Total Nutrition"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
